--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
       <a id="button" href="#">Download CV</a>
     </nav>
   </header>
+
+  <main>
+    <div id="name">
+      <h1>João Pedro</h1>
+      <h2>Front-end developer</h2>
+    </div>
+  </main>
   
 </body>
 </html>
