refactoring file structure & add button below box

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Doppio+One&family=Fugaz+One&family=Germania+One&display=swap" rel="stylesheet">
 
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/components/box.css">
+  <link rel="stylesheet" href="/components/button.css">
+  <link rel="stylesheet" href="/components/index.css">
+  <link rel="stylesheet" href="/components/reset.css">
+  <link rel="stylesheet" href="/components/subtitle.css">
+  <link rel="stylesheet" href="/components/title.css">
+
   <link rel="shortcut icon" href="./assets/img/assets.png" type="image/x-icon">
 
   <title>Portfólio - João Pedro</title>
@@ -23,15 +29,17 @@
       <a href="#">Projetos</a>
       <a href="#">Sobre</a>
       <a href="#">Contato</a>
-      <a id="button" href="#">Download CV</a>
+      <a class="button" href="#">Download CV</a>
     </nav>
   </header>
 
   <main>
-    <div id="name">
+    <div id="box">
       <h1>João Pedro</h1>
-      <h2>Front-end developer</h2>
+      <h2>Front-end student</h2>
     </div>
+    <a class="button" href="#">Download CV</a>
+    <a class="button" href="#">Contatos</a>
   </main>
   
 </body>
