Create the action and header css file

--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Doppio+One&family=Fugaz+One&family=Germania+One&display=swap" rel="stylesheet">
 
-
+  <link rel="stylesheet" href="/components/action.css">
   <link rel="stylesheet" href="/components/box.css">
   <link rel="stylesheet" href="/components/button.css">
+  <link rel="stylesheet" href="/components/header.css">
   <link rel="stylesheet" href="/components/index.css">
-  <link rel="stylesheet" href="/components/reset.css">
   <link rel="stylesheet" href="/components/subtitle.css">
   <link rel="stylesheet" href="/components/title.css">
 
-  <link rel="shortcut icon" href="./assets/img/assets.png" type="image/x-icon">
+  <link rel="stylesheet" href="/reset.css">
+
+  <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
 
   <title>Portfólio - João Pedro</title>
 </head>
 <body>
 
   <header>
-    <img id="logo" src="./assets/img/assets.png" alt="Logo João Pedro">
+    <img id="logo" src="./assets/img/logo.png" alt="Logo João Pedro">
     <nav>
       <a href="#">Skills</a>
       <a href="#">Projetos</a>
@@ -34,12 +36,14 @@
   </header>
 
   <main>
+    <section>
     <div id="box">
       <h1>João Pedro</h1>
       <h2>Front-end student</h2>
     </div>
     <a class="button" href="#">Download CV</a>
     <a class="button" href="#">Contatos</a>
+  </section>
   </main>
   
 </body>
