Create the banner component

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Doppio+One&family=Fugaz+One&family=Germania+One&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="/components/action.css">
-  <link rel="stylesheet" href="/components/box.css">
-  <link rel="stylesheet" href="/components/button.css">
-  <link rel="stylesheet" href="/components/header.css">
-  <link rel="stylesheet" href="/components/index.css">
-  <link rel="stylesheet" href="/components/subtitle.css">
-  <link rel="stylesheet" href="/components/title.css">
+  <link rel="stylesheet" href="./components/action.css">
+  <link rel="stylesheet" href="./components/banner.css">
+  <link rel="stylesheet" href="./components/box.css">
+  <link rel="stylesheet" href="./components/button.css">
+  <link rel="stylesheet" href="./components/header.css">
+  <link rel="stylesheet" href="./components/index.css">
+  <link rel="stylesheet" href="./components/subtitle.css">
+  <link rel="stylesheet" href="./components/title.css">
 
   <link rel="stylesheet" href="/reset.css">
 
@@ -36,14 +37,19 @@
   </header>
 
   <main>
-    <section>
-    <div id="box">
-      <h1>João Pedro</h1>
-      <h2>Front-end student</h2>
-    </div>
-    <a class="button" href="#">Download CV</a>
-    <a class="button" href="#">Contatos</a>
-  </section>
+    <section class="banner">
+      <div class="wrapper">
+        <div class="box">
+          <h1 class="title">João Pedro</h1>
+          <h2 class="subtitle">Front-end student</h2>
+        </div>
+
+        <div class="navigation">
+          <a class="button" href="#">Download CV</a>
+          <a class="button" href="#">Contatos</a>
+        </div>
+      </div>
+    </section>
   </main>
   
 </body>
