Create the -second variation to Title

--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Doppio+One&family=Fugaz+One&family=Germania+One&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./components/action.css">
-  <link rel="stylesheet" href="./components/banner.css">
-  <link rel="stylesheet" href="./components/box.css">
-  <link rel="stylesheet" href="./components/button.css">
-  <link rel="stylesheet" href="./components/header.css">
-  <link rel="stylesheet" href="./components/index.css">
-  <link rel="stylesheet" href="./components/subtitle.css">
-  <link rel="stylesheet" href="./components/title.css">
+  <link rel="stylesheet" href="./css/components/action.css">
+  <link rel="stylesheet" href="./css/components/banner.css">
+  <link rel="stylesheet" href="./css/components/box.css">
+  <link rel="stylesheet" href="./css/components/button.css">
+  <link rel="stylesheet" href="./css/components/header.css">
+  <link rel="stylesheet" href="./css/components/index.css">
+  <link rel="stylesheet" href="./css/components/subtitle.css">
+  <link rel="stylesheet" href="./css/components/title.css">
 
-  <link rel="stylesheet" href="/reset.css">
-
+  <link rel="stylesheet" href="/css/reset.css">
   <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
 
   <title>Portfólio - João Pedro</title>
@@ -49,6 +48,9 @@
           <a class="button" href="#">Contatos</a>
         </div>
       </div>
+    </section>
+
+        <h1 class="title -second">Skills</h1>
     </section>
   </main>
   
