--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="./css/components/button.css">
   <link rel="stylesheet" href="./css/components/header.css">
   <link rel="stylesheet" href="./css/components/index.css">
+  <link rel="stylesheet" href="./css/components/section.css">
   <link rel="stylesheet" href="./css/components/subtitle.css">
   <link rel="stylesheet" href="./css/components/title.css">
 
@@ -49,7 +50,7 @@
         </div>
       </div>
     </section>
-
+    <section class="section">
         <h1 class="title -second">Skills</h1>
     </section>
   </main>
