Create the Skill component

--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
     </section>
     <section class="section">
         <h1 class="title -second">Skills</h1>
+
+        <dl>
+          <dt>HTML</dt>
+          <dd>
+            <img class="img" src="./assets/img/ico_html5.png" alt="Logo HTML">
+          </dd>
+          <dd>
+            <progress max="100" value="40">40%</progress>
+          </dd>
+        </dl>
     </section>
   </main>
   
