--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="./css/components/header.css">
   <link rel="stylesheet" href="./css/components/index.css">
   <link rel="stylesheet" href="./css/components/section.css">
+  <link rel="stylesheet" href="./css/components/skill.css">
   <link rel="stylesheet" href="./css/components/subtitle.css">
   <link rel="stylesheet" href="./css/components/title.css">
 
@@ -56,7 +57,7 @@
         <dl>
           <dt>HTML</dt>
           <dd>
-            <img class="img" src="./assets/img/ico_html5.png" alt="Logo HTML">
+            <img class="icon" src="./assets/img/ico_html5.png" alt="Logo HTML">
           </dd>
           <dd>
             <progress max="100" value="40">40%</progress>
