--- a/index.html
+++ b/index.html
@@ -1,70 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Doppio+One&family=Fugaz+One&family=Germania+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Doppio+One&family=Fugaz+One&family=Germania+One&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="stylesheet" href="./css/components/action.css">
-  <link rel="stylesheet" href="./css/components/banner.css">
-  <link rel="stylesheet" href="./css/components/box.css">
-  <link rel="stylesheet" href="./css/components/button.css">
-  <link rel="stylesheet" href="./css/components/header.css">
-  <link rel="stylesheet" href="./css/components/index.css">
-  <link rel="stylesheet" href="./css/components/section.css">
-  <link rel="stylesheet" href="./css/components/skill.css">
-  <link rel="stylesheet" href="./css/components/subtitle.css">
-  <link rel="stylesheet" href="./css/components/title.css">
+    <link rel="stylesheet" href="./css/components/action.css" />
+    <link rel="stylesheet" href="./css/components/banner.css" />
+    <link rel="stylesheet" href="./css/components/box.css" />
+    <link rel="stylesheet" href="./css/components/button.css" />
+    <link rel="stylesheet" href="./css/components/header.css" />
+    <link rel="stylesheet" href="./css/components/index.css" />
+    <link rel="stylesheet" href="./css/components/main-title.css" />
+    <link rel="stylesheet" href="./css/components/progress-bar.css" />
+    <link rel="stylesheet" href="./css/components/section.css" />
+    <link rel="stylesheet" href="./css/components/skill-tec.css" />
+    <link rel="stylesheet" href="./css/components/subtitle.css" />
 
-  <link rel="stylesheet" href="/css/reset.css">
-  <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link
+      rel="shortcut icon"
+      href="./assets/img/logo.png"
+      type="image/x-icon"
+    />
 
-  <title>Portfólio - João Pedro</title>
-</head>
-<body>
+    <title>Portfólio - João Pedro</title>
+  </head>
+  <body>
+    <header>
+      <img id="logo" src="./assets/img/logo.png" alt="Logo João Pedro" />
+      <nav>
+        <a href="#">Skills</a>
+        <a href="#">Projetos</a>
+        <a href="#">Sobre</a>
+        <a href="#">Contato</a>
+        <a class="button" href="#">Download CV</a>
+      </nav>
+    </header>
 
-  <header>
-    <img id="logo" src="./assets/img/logo.png" alt="Logo João Pedro">
-    <nav>
-      <a href="#">Skills</a>
-      <a href="#">Projetos</a>
-      <a href="#">Sobre</a>
-      <a href="#">Contato</a>
-      <a class="button" href="#">Download CV</a>
-    </nav>
-  </header>
+    <main>
+      <section class="banner">
+        <div class="wrapper">
+          <div class="box">
+            <h1 class="main-title">João Pedro</h1>
+            <h2 class="subtitle">Front-end student</h2>
+          </div>
 
-  <main>
-    <section class="banner">
-      <div class="wrapper">
-        <div class="box">
-          <h1 class="title">João Pedro</h1>
-          <h2 class="subtitle">Front-end student</h2>
+          <div class="navigation">
+            <a class="button" href="#">Download CV</a>
+            <a class="button" href="#">Contatos</a>
+          </div>
         </div>
+      </section>
+      <section class="section">
+        <h1 class="main-title -second">Skills</h1>
 
-        <div class="navigation">
-          <a class="button" href="#">Download CV</a>
-          <a class="button" href="#">Contatos</a>
-        </div>
-      </div>
-    </section>
-    <section class="section">
-        <h1 class="title -second">Skills</h1>
-
-        <dl>
-          <dt>HTML</dt>
-          <dd>
-            <img class="icon" src="./assets/img/ico_html5.png" alt="Logo HTML">
-          </dd>
-          <dd>
-            <progress max="100" value="40">40%</progress>
-          </dd>
-        </dl>
-    </section>
-  </main>
-  
-</body>
+        <article class="skill-tec">
+          <img
+              class="img-icon"
+              src="./assets/img/ico_html5.png"
+              alt="Logo do HTML"
+            />
+          <div class="right">
+            <h3 class="title">HTML</h3>
+            <progress class="progress-bar" max="100" value="40">
+                40%
+            </progress>
+          </div>
+        </article>
+      </section>
+    </main>
+  </body>
 </html>
