--- a/index.html
+++ b/index.html
@@ -74,6 +74,76 @@
             </progress>
           </div>
         </article>
+
+        <article class="skill-tec">
+          <img
+              class="img-icon"
+              src="./assets/img/ico_css3.png"
+              alt="Logo do CSS3"
+            />
+          <div class="right">
+            <h3 class="title">CSS</h3>
+            <progress class="progress-bar" max="100" value="40">
+                40%
+            </progress>
+          </div>
+        </article>
+
+        <article class="skill-tec">
+          <img
+              class="img-icon -square"
+              src="./assets/img/ico_js.png"
+              alt="Logo do JavaScript"
+            />
+          <div class="right">
+            <h3 class="title">JavaScript</h3>
+            <progress class="progress-bar" max="100" value="40">
+                40%
+            </progress>
+          </div>
+        </article>
+
+        <article class="skill-tec">
+          <img
+              class="img-icon -square"
+              src="./assets/img/ico_git.png"
+              alt="Logo do Git"
+            />
+          <div class="right">
+            <h3 class="title">Git</h3>
+            <progress class="progress-bar" max="100" value="40">
+                40%
+            </progress>
+          </div>
+        </article>
+
+        <article class="skill-tec">
+          <img
+              class="img-icon"
+              src="./assets/img/ico_react.png"
+              alt="Logo do React"
+            />
+          <div class="right">
+            <h3 class="title">React</h3>
+            <progress class="progress-bar" max="100" value="40">
+                40%
+            </progress>
+          </div>
+        </article>
+
+        <article class="skill-tec">
+          <img
+              class="img-icon"
+              src="./assets/img/ico_node.png"
+              alt="Logo do NodeJS"
+            />
+          <div class="right">
+            <h3 class="title">NodeJS</h3>
+            <progress class="progress-bar" max="100" value="40">
+                40%
+            </progress>
+          </div>
+        </article>
       </section>
     </main>
   </body>
