--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./css/components/section.css" />
     <link rel="stylesheet" href="./css/components/skill-tec.css" />
     <link rel="stylesheet" href="./css/components/subtitle.css" />
+    <link rel="stylesheet" href="./css/components/wrapper-skill.css" />
 
     <link rel="stylesheet" href="/css/reset.css" />
     <link
@@ -58,9 +59,10 @@
           </div>
         </div>
       </section>
+
       <section class="section">
         <h1 class="main-title -second">Skills</h1>
-
+        <div class="wrapper-skill">
         <article class="skill-tec">
           <img
               class="img-icon"
@@ -73,77 +75,78 @@
                 40%
             </progress>
           </div>
-        </article>
+          </article>
 
-        <article class="skill-tec">
-          <img
-              class="img-icon"
-              src="./assets/img/ico_css3.png"
-              alt="Logo do CSS3"
-            />
-          <div class="right">
-            <h3 class="title">CSS</h3>
-            <progress class="progress-bar" max="100" value="40">
-                40%
-            </progress>
-          </div>
-        </article>
+          <article class="skill-tec">
+            <img
+                class="img-icon"
+                src="./assets/img/ico_css3.png"
+                alt="Logo do CSS3"
+              />
+            <div class="right">
+              <h3 class="title">CSS</h3>
+              <progress class="progress-bar" max="100" value="40">
+                  40%
+              </progress>
+            </div>
+          </article>
 
-        <article class="skill-tec">
-          <img
-              class="img-icon -square"
-              src="./assets/img/ico_js.png"
-              alt="Logo do JavaScript"
-            />
-          <div class="right">
-            <h3 class="title">JavaScript</h3>
-            <progress class="progress-bar" max="100" value="40">
-                40%
-            </progress>
-          </div>
-        </article>
+          <article class="skill-tec">
+            <img
+                class="img-icon -square"
+                src="./assets/img/ico_js.png"
+                alt="Logo do JavaScript"
+              />
+            <div class="right">
+              <h3 class="title">JavaScript</h3>
+              <progress class="progress-bar" max="100" value="40">
+                  40%
+              </progress>
+            </div>
+          </article>
 
-        <article class="skill-tec">
-          <img
-              class="img-icon -square"
-              src="./assets/img/ico_git.png"
-              alt="Logo do Git"
-            />
-          <div class="right">
-            <h3 class="title">Git</h3>
-            <progress class="progress-bar" max="100" value="40">
-                40%
-            </progress>
-          </div>
-        </article>
+          <article class="skill-tec">
+            <img
+                class="img-icon -square"
+                src="./assets/img/ico_git.png"
+                alt="Logo do Git"
+              />
+            <div class="right">
+              <h3 class="title">Git</h3>
+              <progress class="progress-bar" max="100" value="40">
+                  40%
+              </progress>
+            </div>
+          </article>
 
-        <article class="skill-tec">
-          <img
-              class="img-icon"
-              src="./assets/img/ico_react.png"
-              alt="Logo do React"
-            />
-          <div class="right">
-            <h3 class="title">React</h3>
-            <progress class="progress-bar" max="100" value="40">
-                40%
-            </progress>
-          </div>
-        </article>
+          <article class="skill-tec">
+            <img
+                class="img-icon"
+                src="./assets/img/ico_react.png"
+                alt="Logo do React"
+              />
+            <div class="right">
+              <h3 class="title">React</h3>
+              <progress class="progress-bar" max="100" value="40">
+                  40%
+              </progress>
+            </div>
+          </article>
 
-        <article class="skill-tec">
-          <img
-              class="img-icon"
-              src="./assets/img/ico_node.png"
-              alt="Logo do NodeJS"
-            />
-          <div class="right">
-            <h3 class="title">NodeJS</h3>
-            <progress class="progress-bar" max="100" value="40">
-                40%
-            </progress>
-          </div>
-        </article>
+          <article class="skill-tec">
+            <img
+                class="img-icon"
+                src="./assets/img/ico_node.png"
+                alt="Logo do NodeJS"
+              />
+            <div class="right">
+              <h3 class="title">NodeJS</h3>
+              <progress class="progress-bar" max="100" value="40">
+                  40%
+              </progress>
+            </div>
+          </article>
+        </div>
       </section>
     </main>
   </body>
